--- a/client/game.html
+++ b/client/game.html
@@ -9,12 +9,15 @@
 	<script src="jquery-ui-1.10.4.custom.min.js"></script>
 	<!-- CreateJS -->
 	<script src="createjs-2013.12.12.min.js"></script>
-	<!-- Preload game data -->
+	<!-- Preload game data - Map -->
 	<script src="map_adding.js"></script>
 	<script src="map_texture/texture/adding.js"></script>
 	<script src="map_texture/object/adding.js"></script>
+	<!-- Preload game data - NPC -->
 	<script src="npc_src/sage.js"></script>
 	<script src="npc_src/bat.js"></script>
+	<script src="npc_src/teenage_boy.js"></script>
+	<script src="npc_src/flower_shop.js"></script>
 	<script src="npc_adding.js"></script>
 	<!-- RPG source -->
 	<script src="RPG/global_function.js"></script>
