--- a/client/game.html
+++ b/client/game.html
@@ -22,6 +22,7 @@
 	<!-- RPG source -->
 	<script src="RPG/global_function.js"></script>
 	<script src="RPG/sprite_choose.js"></script>
+	<script src="RPG/astar.js"></script>
 	<script src="RPG/map.js"></script>
 	<script src="RPG/npc.js"></script>
 	<script src="RPG/character.js"></script>
