--- a/client/game.html
+++ b/client/game.html
@@ -53,7 +53,7 @@
 			stage = new createjs.Stage( "myCanvas" ) ;
     		document.body.style.cursor = "url('cursor/normal_select.cur'), default" ;
 
-    		var mapNum = 2 ;
+    		var mapNum = 3 ;
 
 			// Create the map control object, it the highest level.
 			// Back map(texture), front map(objects, characters) all in the object.
@@ -66,7 +66,8 @@
 			// 建立遊戲框架
 			var framework = new Main_Framework( canvasSize ) ;
 			// 建立角色物件
-			var mainCharacter = new Character( mapControl, "小鮭魚", { HP: 175, SP: 55 }, { x: 17, y: 35 }, 180, { body: "novice", hair: "style1_white" }, 4 ) ;
+			// var mainCharacter = new Character( mapControl, "小鮭魚", { HP: 175, SP: 55 }, { x: 17, y: 35 }, 180, { body: "novice", hair: "style1_white" }, 4 ) ;
+			var mainCharacter = new Character( mapControl, "小鮭魚", { HP: 175, SP: 55 }, { x: 1, y: 1 }, 180, { body: "novice", hair: "style1_white" }, 4 ) ;
 			mainCharacter.OnLifeModify( -999, -40 ) ;
 
 			// 地圖背景匯入
