--- a/client/game.html
+++ b/client/game.html
@@ -66,14 +66,19 @@
 			// 建立遊戲框架
 			var framework = new Main_Framework( canvasSize ) ;
 			// 建立角色物件
-			while ( true ) {
-				var startX = Math.floor( Math.random() * cacheMapData.map[mapNum].tileData[0].length ) ;
-				var startY = Math.floor( Math.random() * cacheMapData.map[mapNum].tileData.length ) ;
-				if ( cacheMapData.map[mapNum].tileData[startY][startX].w == 1 )
-					break;
+			function getRandomGrid () {
+				while ( true ) {
+					var startX = Math.floor( Math.random() * cacheMapData.map[mapNum].tileData[0].length ) ;
+					var startY = Math.floor( Math.random() * cacheMapData.map[mapNum].tileData.length ) ;
+					if ( cacheMapData.map[mapNum].tileData[startY][startX].w == 1 )
+						return ( { x: startX+1, y: startY+1 } );
+				}
 			}
 
-			var mainCharacter = new Character( mapControl, "小鮭魚", { HP: 175, SP: 55 }, { x: startX+1, y: startY+1 }, 180, { body: "novice", hair: "style1_white" }, 4 ) ;
+			var mainCharacter = new Character( mapControl, "小鮭魚", { HP: 175, SP: 55 }, getRandomGrid(), 180, { body: "novice", hair: "style1_white" }, 4, true ) ;
+			var mainCharacter2 = new Character( mapControl, "小鮭魚", { HP: 175, SP: 55 }, getRandomGrid(), 180, { body: "novice", hair: "style1_white" }, 4, false ) ;
+			var mainCharacter3 = new Character( mapControl, "小鮭魚", { HP: 175, SP: 55 }, getRandomGrid(), 180, { body: "novice", hair: "style1_white" }, 4, false ) ;
+			var mainCharacter4 = new Character( mapControl, "小鮭魚", { HP: 175, SP: 55 }, getRandomGrid(), 180, { body: "novice", hair: "style1_white" }, 4, false ) ;
 			mainCharacter.OnLifeModify( -999, -40 ) ;
 
 			// 地圖背景匯入
